:lipstick: Fix off center text in button

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
 
 button {
   display: flex;
+  align-items: center;
   max-height: 40px;
   background-color: #01a7ca;
   color: white;
